Added a video.html page. Added video.html link to the menu in animation.html, illustration.html and index.html. Extra note: Videos aren't in column divs, row div is made into column.

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -222,6 +222,14 @@ h4 a {
 	color: rgba(0, 55, 45, 0.8);
 }
 
+#row-video{
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin-top: 8px;
+	padding: 0;
+}
+
 /*footer*/
 footer {
 	width: 100%;
@@ -278,5 +286,10 @@ footer {
 		min-width: 95%;
 		margin: 0 auto;
 		padding: 0;
+	}
+
+	iframe{
+		width: 500px;
+		height: 500px;
 	}
 }
